test/libsolidity/syntaxTests/tryCatch/catch_custom.sol
contract C {
    error E();
    function f() public {
        try this.f() {

        } catch E() {

        }
    }
}
// ====
// EVMVersion: >=byzantium
// ----
// UnimplementedFeatureError: NONE
